--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Gdelete</string>
+    <string name="hanif">hanif</string>
+    <string name="hani">hani</string>
+    <string name="han">han</string>
+    <string name="ha">ha</string>
+    <string name="h">h</string>
+
 </resources>
