--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="han">han</string>
     <string name="ha">ha</string>
     <string name="h">h</string>
+    <string name="go_for_deleting">Go For Deleting</string>
+    <string name="more_apps">More Apps</string>
 
 </resources>
