--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="h">h</string>
     <string name="go_for_deleting">Go For Deleting</string>
     <string name="more_apps">More Apps</string>
+    <string name="points">points</string>
+    <string name="hanifa">hanifa</string>
+    <string name="hanifar">hanifar</string>
 
 </resources>
